# TinyTorch

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
samples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  backward.h  graph.h  main.cpp  ops.cpp  ops.h  ops_impl.cpp  optimizer.h  tensor.h  tensor_ops_impl.h  tiny_torch.h  torch.natvis
src/torch/: backward.h  cuda.h  graph.h  module.h  ops.cpp  ops.h  ops_impl.cpp  optimizer.h  tensor.cpp  tensor.h  tensor_data.cpp  tensor_data.h  tensor_info.h  tensor_options.h  tiny_torch.h  tiny_torch_build_config.h.in  tiny_torch_config.h  tiny_torch_cuda.h  torch.h
src/torch/core/: backward.cpp  backward.h  crash.cpp  crash.h  graph.cpp  graph.h  half.cpp  half.h  module.h  ops.cpp  ops.h  ops_functions.cpp  ops_functions.h  ops_impl.h  ops_impl_shared.h  ops_math_functions.cpp  ops_math_functions.h  ops_operators.cpp  ops_operators.h  ops_tensor_creation.cpp  ops_tensor_creation.h  optimizer.cpp  optimizer.h  tensor.cpp  tensor.h  tensor_data.cpp  tensor_data.h  tensor_impl.cpp  tensor_impl.h  tensor_info.h  tensor_options.h  types.cpp  types.h
src/torch/core/ops/: all.h  ops_functions.cpp  ops_functions.h  ops_impl.h  ops_impl_shared.h  ops_math_functions.cpp  ops_math_functions.h  ops_operators.cpp  ops_operators.h  ops_tensor_creation.cpp  ops_tensor_creation.h  ops_unary_functions.cpp  ops_unary_functions.h
src/torch/cpu/: binary_operators.cpp  binary_operators.h  conv.cpp  conv.h  grid_sample.cpp  grid_sample.h  ops_impl_cpu.cpp  ops_impl_cpu.h  ops_impl_cpu_helper.h  ops_operators_impl_cpu.cpp  ops_operators_impl_cpu.h  unary_operators.cpp  unary_operators.h
src/torch/cuda/: atomic_minmax.h  binary_operators.cu  binary_operators.h  cached_memory_allocator.cu  cached_memory_allocator.h  cuda.h  grid_sample.cu  grid_sample.h  multi_device.cpp  multi_device.cu  multi_device.h  ops_impl_cuda.cu  ops_impl_cuda.h  ops_impl_cuda_helper.h  ops_indexing.cu  ops_operators_impl_cuda.cu  ops_operators_impl_cuda.h  reduce_dim_operators.cu  reduce_helper.h  reduce_operators.cu  reduce_operators.h  tt_cuda.cu  tt_cuda.h  unary_operators.cu  unary_operators.h
